index page edits

--- a/css/main.css
+++ b/css/main.css
@@ -1909,7 +1909,7 @@ input::-moz-focus-inner {
 .s-intro {
   width: 100%;
   height: 100vh;
-  min-height: 792px;
+  /* min-height: 792px; */
   background-color: #050505;
 }
 
