--- a/css/main.css
+++ b/css/main.css
@@ -2506,7 +2506,7 @@ input::-moz-focus-inner {
  * ------------------------------------------------------------------- */
 .s-services {
   padding-top: 5rem;
-  /* padding-bottom: 16rem; */
+  padding-bottom: 5rem;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
