--- a/css/main.css
+++ b/css/main.css
@@ -1924,7 +1924,7 @@ input::-moz-focus-inner {
 }
 
 .intro-pic {
-  background-color: #02182c;
+  /* background-color: #02182c; */
   background-repeat: no-repeat;
   background-position: top center;
   background-image: url(../images/profilepic.png);
@@ -1943,7 +1943,7 @@ input::-moz-focus-inner {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  /* background-color: #000000; */
   opacity: .2;
 }
 
